# Descify

./: .gitignore  DYNAMIC_MODEL_FETCHING.md  EDITABLE_TEMPLATES_IMPLEMENTATION.md  EXIFTOOL_FIX_SUMMARY.md  LICENSE  LocalModel.md  MEMOIZATION_OPTIMIZATION.md  OPENROUTER_INTEGRATION.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SHARP_IMPLEMENTATION.md  TOKEN_OPTIMIZATION.md  agent.md  bulk_image_processor_v3.html  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-stdin.sh  test.txt  tsconfig.json  vite.config.ts
.github/workflows/: com.yourapp.App.yml  publish.yml
flatpak/: cargo-sources.json
scripts/: setup-exiftool.sh  thumbnail-processor.js
src/: App.css  App.tsx  main.tsx  webgpu.d.ts
src-tauri/: Cargo.toml  EXIFTOOL_SETUP.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache.rs  metadata.rs  mod.rs  thumbnail.rs
src-tauri/src/models/: metadata.rs
src-tauri/src/services/: exiftool.rs  gpu_thumbnail.rs  mod.rs  thumbnail.rs
src/app/: Home.tsx  LandingPage.tsx  LandingPageOld.tsx  Landingpage.tsx  LoadingPage.tsx
src/app/_component/: ConsolePopover.tsx
src/app/_component/TabGroup/: LeftTabs.tsx
src/app/_component/action/:  ActionsSection.tsx
src/app/_component/batch/: BatchProgress.tsx  BatchProsess.tsx  FolderDropZone.tsx  FolderInfoCard.tsx  ThumbnailCache.ts
src/app/_component/category/: CategorySection.tsx
src/app/_component/file-preview/: FileSection.tsx
src/app/_component/metadeta/: EmbeddedMetadataPanel.tsx  MetadataSection.tsx
src/app/_component/navigation/: Navbar.tsx
src/app/_component/progressbar/: ProgressSection.tsx
src/app/contexts/: SettingsContext.tsx
src/app/lib/: ai.ts  batchProcessor.ts  categoryMatcher.ts  exportUtils.ts  fileUtils.ts  keywordUtils.ts  modelFetcher.ts  tauri-commands.ts  templateUtils.ts  thumbnail.worker.ts  thumbnailGenerator.ts
src/app/workers/: thumbnailWorker.ts
src/components/: ConsoleContext.tsx  ConsoleViewer.tsx  UpdateChecker.tsx  mode-toggle.tsx  theme-picker.tsx  theme-provider.tsx  useConsoleLogs.ts
src/components/ui/: button.tsx  command.tsx  dialog.tsx  popover.tsx  upload.tsx
src/lib/: themes.ts
src/store/: store.ts
src/store/slices/: batchProcessSlice.ts  batchSlice.ts  configSlice.ts  fileSlice.ts  metadataSlice.ts  templateSlice.ts  uiSlice.ts
(+59 files in other folders)
