[package]
name = "Descify"
version = "1.2.0"
description = "AI powered image metadata manager"
authors = ["arrifat346afs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = []  }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2"
md5 = "0.7"
base64 = "0.22"
dirs = "5"
lazy_static = "1.4"
image = "0.25"
blake3 = "1.5"
memmap2 = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
which = "7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
